k8s/mediaserver/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: mediaserver
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeName: k3s-3
      containers:
        - name: jellyfin
          image: ghcr.io/linuxserver/jellyfin
          resources:
            limits:
              cpu: "3"
            requests:
              cpu: "1.5"
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/tvshows
              name: tv-shows
              readOnly: false
            - mountPath: /data/movies
              name: movies
              readOnly: false
            - mountPath: /data/music
              name: music
              readOnly: false
            - mountPath: /data/video
              name: video
      volumes:
        - name: config
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/jellyfin
        - name: tv-shows
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/tv-shows
            readOnly: false
        - name: movies
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/movies
            readOnly: false
        - name: music
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/music
            readOnly: false
        - name: video
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/video
            readOnly: false
