k8s/mediaserver/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: mediaserver
spec:
  rules:
    - host: "jellyfin.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 80
